--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                    <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
                         <div class="hero-text">
 
-                            <h1 class="hero-title">👋 Журавель Роман<br>сайт викладача</h1>
+                            <h1 class="hero-title">Журавель Роман<br>сайт викладача</h1>
 
                             <a href="mailto: roman.zhuravel@ptfc.ukr.education" class="email-link">
                               roman.zhuravel@ptfc.ukr.education
