--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="container text-center">
           <div class="row align-items-center">
             <div class="col-lg-12 col-md-8 col-12">
-              <iframe width=100% height="480" src="https://www.youtube.com/embed/BAggDWRZsgM" title="Unitronics V700 Klinkmann" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width=960 height="540" src="https://www.youtube.com/embed/BAggDWRZsgM" title="Unitronics V700 Klinkmann" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
