--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
 
 </head>
 
+<style>
+    .video-container {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 співвідношення */
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+        background: #000;
+    }
+
+    .video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+</style>
+     
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
     <!-- MENU BAR -->
@@ -163,8 +182,14 @@
         </div>
         <div class="container text-center">
           <div class="row align-items-center">
-            <div class="col-lg-12 col-md-8 col-12">
-              <iframe width=960 height="540" src="https://www.youtube.com/embed/BAggDWRZsgM" title="Unitronics V700 Klinkmann" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="video-container">
+              <iframe 
+                src="https://www.youtube.com/embed/BAggDWRZsgM" 
+                title="Unitronics V700 Klinkmann" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+              </iframe>
             </div>
           </div>
         </div>
