--- a/index.html
+++ b/index.html
@@ -3,44 +3,100 @@
 <html lang="uk">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт-візитівка</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Сайт-візитівка</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <style>
-    img {max-width: 100%;
-        height: auto;
-        border-radius: 20px;}
-	table {border: none;}
+	img {
+		max-width: 100%;
+		height: auto;
+		border-radius: 20px;
+	}
 </style>
 
 <body>
-    <div class=container>
-        <table width=100%>
+	<div class=container>
+	
+		<table width=100%>
 		<tr>
 		<td>
 		<h1>Журавель Роман</h1>
-		<h2>сайт викладача</h2>
-        <a href="mailto:roman.zhuravel@ptfc.ukr.education" class="btn">roman.zhuravel@ptfc.ukr.education</a>
+		<br>Ласкаво просимо на мій сайт викладача.
+		<br>
+		<br>Тут ви знайдете інформацію про мене та мою педагогічну діяльність.
 		</td>
-		<td><p align=right><img src="foto.jpg" width=240 height=240></p>
+		<td width=220><p align=right><img src="foto.jpg" width=200 height=200></p>
 		</td>
 		</tr>
-		<table>
+		</table>
+		
+		<p align=center>
+		<a href="https://example.com" class="btn">Дізнатися більше</a>
+		<a href="https://example.com" class="btn">Дізнатися більше</a>
+		<a href="https://example.com" class="btn">Дізнатися більше</a>
+		</p>
+		
 		<hr style="border: 1px solid #212529;">
-		    
-        <h2>Розмір заголовку H2</h2>
-        <h3>Розмір заголовку H3</h3>
-        <h4>Розмір заголовку H4</h4>
-        <h5>Розмір заголовку H5</h5>
-        <p>Ласкаво просимо на мій персональний сайт. Тут ви знайдете інформацію про мене та мої проєкти.</p>
-        <p align=center><a href="https://example.com" class="btn">Дізнатися більше</a>
-        <a href="https://example.com" class="btn">Дізнатися більше</a>
-        <a href="https://example.com" class="btn">Дізнатися більше</a></p>
-    </div>
+		
+		<h2 align=center>Загальні відомості</h2>
+		
+		<table width=100%>
+		<tr>
+		<td>
+		<h3>Освіта</h3>
+		<p>2009, Сумський державний університет, кваліфікація магістр з електронних систем</p>
+		<p>2005, Прилуцький агротехнічний технікум, кваліфікація технік-електрик</p>
+		<h3>Посади</h3>
+		<p>2010-2025, викладач спеціальних дисциплін</p>
+		<p>2018-2021, голова циклової комісії спеціальних комп'ютерних дисциплін</p>
+		<p>2006-2010, завідуючий інформаційним центром коледжу</p>
+		<p>2005-2010, лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
+		</td>
+		<td width=320><p align=right><img src="pic1.jpg" width=300 height=300></p>
+		</td>
+		</tr>
+		</table>
+		
+		<table width=100%>
+		<tr>
+		<td>
+		<h3>Дисципліни</h3>
+		<p>2024-2025, Основи цифрового керування та програмування мікроконтролерів</p>
+		<p>2024-2025, Інформаційні технології</p>
+		<p>2023-2025, Комп'ютерні мережі</p>
+		<p>2016-2025, Архітектура комп'ютерів</p>
+		<p>2016-2025, Алгоритми та методи обчислень</p>
+		<p>2011-2018, 2024-2025 Основи автоматики</p>
+		<p>2018-2024, Основи програмної інженерії</p>
+		<p>2017-2021, 2023-2024, Організація баз даних</p>
+		<p>2011-2020, Комп'ютери та комп'ютерні технології</p>
+		<p>2011-2015, Інформаційні та комп'ютерні технології</p>
+		<p>2010, Основи інформатики та обчислювальної техніки</p>
+		</td>
+		<td width=320><p align=right><img src="pic2.jpg" width=300 height=300></p>
+		</td>
+		</tr>
+		</table>
+		
+		<h3>Досягнення в коледжі</h3>
+		<p>2020, В лабораторії "Контролерної техніки" створив лабораторні стенди на базі контролерів Unitronix V700 і написав програми до них для вивчення принципів функціонування контролерної техніки.</p>
+		<p>2014, Обладнав і оформив "Кабінет комп’ютерної техніки" для проведення занять зі спеціальності 123 Комп'ютерна інженерія. На той час перший кабінет на нововідкритому відділенні.</p>
+		<p>2007, Організував інформаційний центр в коледжі для всебічної IT підтримки інфраструктури коледжу. На даний момент цей підрозділ еволюціонував і займається веденням бази ЄДЕБО зі сторони коледжу.</p>
+		
+		<div align=center>
+		<iframe width="640" height="360" src="https://www.youtube.com/embed/BAggDWRZsgM" title="Unitronics V700 Klinkmann" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		</div>
+		
+		<hr style="border: 1px solid #212529;">
+		
+		<hr style="border: 1px solid #212529;">
+		
+		<p align=center>Зв'язок зі мною <a href="mailto:roman.zhuravel@ptfc.ukr.education" class="btn">roman.zhuravel@ptfc.ukr.education</a></p>
+	</div>
 
 </body>
 </html>
