--- a/index.html
+++ b/index.html
@@ -16,23 +16,49 @@
 		height: auto;
 		border-radius: 20px;
 	}
+	
+	.top {
+		display: flex; /* Включає flexbox */
+	}
+	
+	.left {
+		width: 70%;
+	}
+	
+	.right {
+		width: 30%;
+	}
+	
+	.video-container {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 співвідношення */
+        height: 0;
+        overflow: hidden;
+        max-width: 100%;
+        background: #000;
+    }
+
+    .video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 </style>
 
 <body>
-	<div class=container>
 	
-		<table width=100%>
-		<tr>
-		<td>
+	<div class=container>
+		<div class=top>
+		<div class=left>
 		<h1>Журавель Роман</h1>
-		<br>Ласкаво просимо на мій сайт викладача.
-		<br>
-		<br>Тут ви знайдете інформацію про мене та мою педагогічну діяльність.
-		</td>
-		<td width=220><p align=right><img src="foto.jpg" width=200 height=200></p>
-		</td>
-		</tr>
-		</table>
+		<p>Ласкаво просимо на мій сайт викладача.<br>Тут ви знайдете інформацію про мене та мою педагогічну діяльність.</p>
+		</div>
+		<div class=right>
+		<p align=right><img src="foto.jpg" width=200 height=200></p>
+		</div>
+		</div>
 		
 		<p align=center>
 		<a href="https://example.com" class="btn">Дізнатися більше</a>
@@ -44,9 +70,8 @@
 		
 		<h2 align=center>Загальні відомості</h2>
 		
-		<table width=100%>
-		<tr>
-		<td>
+		<div class=top>
+		<div class=left>
 		<h3>Освіта</h3>
 		<p>2009, Сумський державний університет, кваліфікація магістр з електронних систем</p>
 		<p>2005, Прилуцький агротехнічний технікум, кваліфікація технік-електрик</p>
@@ -55,15 +80,15 @@
 		<p>2018-2021, голова циклової комісії спеціальних комп'ютерних дисциплін</p>
 		<p>2006-2010, завідуючий інформаційним центром коледжу</p>
 		<p>2005-2010, лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
-		</td>
-		<td width=320><p align=right><img src="pic1.jpg" width=300 height=300></p>
-		</td>
-		</tr>
-		</table>
+		</div>
+		<div class=right>
+		<p align=right><img src="pic1.jpg" width=300 height=300></p>
+		</div>
+		</div>
 		
-		<table width=100%>
-		<tr>
-		<td>
+		
+		<div class=top>
+		<div class=left>
 		<h3>Дисципліни</h3>
 		<p>2024-2025, Основи цифрового керування та програмування мікроконтролерів</p>
 		<p>2024-2025, Інформаційні технології</p>
@@ -76,19 +101,25 @@
 		<p>2011-2020, Комп'ютери та комп'ютерні технології</p>
 		<p>2011-2015, Інформаційні та комп'ютерні технології</p>
 		<p>2010, Основи інформатики та обчислювальної техніки</p>
-		</td>
-		<td width=320><p align=right><img src="pic2.jpg" width=300 height=300></p>
-		</td>
-		</tr>
-		</table>
+		</div>
+		<div class=right>
+		<p align=right><img src="pic2.jpg" width=300 height=300></p>
+		</div>
+		</div>
 		
 		<h3>Досягнення в коледжі</h3>
 		<p>2020, В лабораторії "Контролерної техніки" створив лабораторні стенди на базі контролерів Unitronix V700 і написав програми до них для вивчення принципів функціонування контролерної техніки.</p>
 		<p>2014, Обладнав і оформив "Кабінет комп’ютерної техніки" для проведення занять зі спеціальності 123 Комп'ютерна інженерія. На той час перший кабінет на нововідкритому відділенні.</p>
 		<p>2007, Організував інформаційний центр в коледжі для всебічної IT підтримки інфраструктури коледжу. На даний момент цей підрозділ еволюціонував і займається веденням бази ЄДЕБО зі сторони коледжу.</p>
 		
-		<div align=center>
-		<iframe width="640" height="360" src="https://www.youtube.com/embed/BAggDWRZsgM" title="Unitronics V700 Klinkmann" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		<div class="video-container">
+			<iframe 
+				src="https://www.youtube.com/embed/BAggDWRZsgM" 
+				title="Unitronics V700 Klinkmann" 
+				frameborder="0" 
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+				allowfullscreen>
+			</iframe>
 		</div>
 		
 		<hr style="border: 1px solid #212529;">
