--- a/index.html
+++ b/index.html
@@ -22,29 +22,32 @@
 	}
 	
 	.left {
-		width: 70%;
+		width: 80%;
+	
 	}
 	
 	.right {
-		width: 30%;
+		width: 20%;
+	
 	}
 	
 	.video-container {
-        position: relative;
-        padding-bottom: 56.25%; /* 16:9 співвідношення */
-        height: 0;
-        overflow: hidden;
-        max-width: 100%;
-        background: #000;
-    }
+		position: relative;
+		padding-bottom: 56.25%; /* 16:9 співвідношення */
+		height: 0;
+		overflow: hidden;
+		max-width: 100%;
+		background: #000;
+		border-radius: 20px;
+	}
 
-    .video-container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+	.video-container iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
 </style>
 
 <body>
@@ -53,7 +56,7 @@
 		<div class=top>
 		<div class=left>
 		<h1>Журавель Роман</h1>
-		<p>Ласкаво просимо на мій сайт викладача.<br>Тут ви знайдете інформацію про мене та мою педагогічну діяльність.</p>
+		<p>Ласкаво просимо на мій сайт викладача.<br><br>Тут ви знайдете інформацію про мене та мою педагогічну діяльність.</p>
 		</div>
 		<div class=right>
 		<p align=right><img src="foto.jpg" width=200 height=200></p>
@@ -61,17 +64,20 @@
 		</div>
 		
 		<p align=center>
-		<a href="https://example.com" class="btn">Дізнатися більше</a>
-		<a href="https://example.com" class="btn">Дізнатися більше</a>
-		<a href="https://example.com" class="btn">Дізнатися більше</a>
+		<a href="https://example.com" class="btn">Мої принципи</a>
+		<a href="https://example.com" class="btn">Публікації</a>
+		<a href="https://example.com" class="btn">Підвищення кваліфікації</a>
+		<a href="https://example.com" class="btn">Сертифікати</a>
+		<a href="https://example.com" class="btn">Нагороди</a>
+		<a href="https://example.com" class="btn">Освітнє середовище</a>
+		<a href="https://example.com" class="btn">Файли</a>
+		<a href="https://example.com" class="btn">Зв'язок</a>
 		</p>
 		
-		<hr style="border: 1px solid #212529;">
+		<br>
 		
 		<h2 align=center>Загальні відомості</h2>
 		
-		<div class=top>
-		<div class=left>
 		<h3>Освіта</h3>
 		<p>2009, Сумський державний університет, кваліфікація магістр з електронних систем</p>
 		<p>2005, Прилуцький агротехнічний технікум, кваліфікація технік-електрик</p>
@@ -80,15 +86,13 @@
 		<p>2018-2021, голова циклової комісії спеціальних комп'ютерних дисциплін</p>
 		<p>2006-2010, завідуючий інформаційним центром коледжу</p>
 		<p>2005-2010, лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
-		</div>
-		<div class=right>
-		<p align=right><img src="pic1.jpg" width=300 height=300></p>
-		</div>
-		</div>
 		
 		
-		<div class=top>
-		<div class=left>
+		<p><img src="pic1.jpg" width=100%></p>
+		
+		
+		
+		
 		<h3>Дисципліни</h3>
 		<p>2024-2025, Основи цифрового керування та програмування мікроконтролерів</p>
 		<p>2024-2025, Інформаційні технології</p>
@@ -101,11 +105,8 @@
 		<p>2011-2020, Комп'ютери та комп'ютерні технології</p>
 		<p>2011-2015, Інформаційні та комп'ютерні технології</p>
 		<p>2010, Основи інформатики та обчислювальної техніки</p>
-		</div>
-		<div class=right>
-		<p align=right><img src="pic2.jpg" width=300 height=300></p>
-		</div>
-		</div>
+		
+		<p><img src="pic2.jpg" width=100%></p>
 		
 		<h3>Досягнення в коледжі</h3>
 		<p>2020, В лабораторії "Контролерної техніки" створив лабораторні стенди на базі контролерів Unitronix V700 і написав програми до них для вивчення принципів функціонування контролерної техніки.</p>
@@ -122,11 +123,17 @@
 			</iframe>
 		</div>
 		
-		<hr style="border: 1px solid #212529;">
+		<br>
 		
-		<hr style="border: 1px solid #212529;">
+		<h2 align=center>Мої принципи</h2>
 		
-		<p align=center>Зв'язок зі мною <a href="mailto:roman.zhuravel@ptfc.ukr.education" class="btn">roman.zhuravel@ptfc.ukr.education</a></p>
+		<br>
+		<h2 align=center>Зв'язок зі мною</h2>
+		
+		<p align=center><a href="mailto:roman.zhuravel@ptfc.ukr.education" class="btn">roman.zhuravel@ptfc.ukr.education</a></p>
+		
+		<br>
+		
 	</div>
 
 </body>
