--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class=top>
 		<div class=left>
 		<h1>Журавель Роман</h1>
-		<p>Ласкаво просимо на мій сайт викладача.<br><br>Тут ви знайдете інформацію про мене та мою педагогічну діяльність.</p>
+		<p>Сайт викладача</p>
 		</div>
 		<div class=right>
 		<p align=right><img src="foto.jpg" width=200 height=200></p>
@@ -79,13 +79,13 @@
 		<h2 align=center>Загальні відомості</h2>
 		
 		<h3>Освіта</h3>
-		<p>2009, Сумський державний університет, кваліфікація магістр з електронних систем</p>
-		<p>2005, Прилуцький агротехнічний технікум, кваліфікація технік-електрик</p>
+		<p><b>2009</b> Сумський державний університет, кваліфікація магістр з електронних систем</p>
+		<p><b>2005</b> Прилуцький агротехнічний технікум, кваліфікація технік-електрик</p>
 		<h3>Посади</h3>
-		<p>2010-2025, викладач спеціальних дисциплін</p>
-		<p>2018-2021, голова циклової комісії спеціальних комп'ютерних дисциплін</p>
-		<p>2006-2010, завідуючий інформаційним центром коледжу</p>
-		<p>2005-2010, лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
+		<p><b>2010</b> Викладач спеціальних дисциплін</p>
+		<p><b>2018</b> Голова циклової комісії спеціальних комп'ютерних дисциплін</p>
+		<p><b>2006</b> Завідуючий інформаційним центром коледжу</p>
+		<p><b>2005</b> Лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
 		
 		
 		<p><img src="pic1.jpg" width=100%></p>
@@ -94,24 +94,24 @@
 		
 		
 		<h3>Дисципліни</h3>
-		<p>2024-2025, Основи цифрового керування та програмування мікроконтролерів</p>
-		<p>2024-2025, Інформаційні технології</p>
-		<p>2023-2025, Комп'ютерні мережі</p>
-		<p>2016-2025, Архітектура комп'ютерів</p>
-		<p>2016-2025, Алгоритми та методи обчислень</p>
-		<p>2011-2018, 2024-2025 Основи автоматики</p>
-		<p>2018-2024, Основи програмної інженерії</p>
-		<p>2017-2021, 2023-2024, Організація баз даних</p>
-		<p>2011-2020, Комп'ютери та комп'ютерні технології</p>
-		<p>2011-2015, Інформаційні та комп'ютерні технології</p>
-		<p>2010, Основи інформатики та обчислювальної техніки</p>
+		<p><b>2024-2025</b> Основи цифрового керування та програмування мікроконтролерів</p>
+		<p><b>2024-2025</b> Інформаційні технології</p>
+		<p><b>2023-2025</b> Комп'ютерні мережі</p>
+		<p><b>2016-2025</b> Архітектура комп'ютерів</p>
+		<p><b>2016-2025</b> Алгоритми та методи обчислень</p>
+		<p><b>2011-2018, 2024-2025</b> Основи автоматики</p>
+		<p><b>2018-2024</b> Основи програмної інженерії</p>
+		<p><b>2017-2021, 2023-2024</b> Організація баз даних</p>
+		<p><b>2011-2020</b> Комп'ютери та комп'ютерні технології</p>
+		<p><b>2011-2015</b> Інформаційні та комп'ютерні технології</p>
+		<p><b>2010</b> Основи інформатики та обчислювальної техніки</p>
 		
 		<p><img src="pic2.jpg" width=100%></p>
 		
 		<h3>Досягнення в коледжі</h3>
-		<p>2020, В лабораторії "Контролерної техніки" створив лабораторні стенди на базі контролерів Unitronix V700 і написав програми до них для вивчення принципів функціонування контролерної техніки.</p>
-		<p>2014, Обладнав і оформив "Кабінет комп’ютерної техніки" для проведення занять зі спеціальності 123 Комп'ютерна інженерія. На той час перший кабінет на нововідкритому відділенні.</p>
-		<p>2007, Організував інформаційний центр в коледжі для всебічної IT підтримки інфраструктури коледжу. На даний момент цей підрозділ еволюціонував і займається веденням бази ЄДЕБО зі сторони коледжу.</p>
+		<p><b>2020</b> В лабораторії "Контролерної техніки" створив лабораторні стенди на базі контролерів Unitronix V700 і написав програми до них для вивчення принципів функціонування контролерної техніки.</p>
+		<p><b>2014</b> Обладнав і оформив "Кабінет комп’ютерної техніки" для проведення занять зі спеціальності 123 Комп'ютерна інженерія. На той час перший кабінет на нововідкритому відділенні.</p>
+		<p><b>2007</b> Організував інформаційний центр в коледжі для всебічної IT підтримки інфраструктури коледжу. На даний момент цей підрозділ еволюціонував і займається веденням бази ЄДЕБО зі сторони коледжу.</p>
 		
 		<div class="video-container">
 			<iframe 
