--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 		<p><b>2009</b> Сумський державний університет, кваліфікація магістр з електронних систем</p>
 		<p><b>2005</b> Прилуцький агротехнічний технікум, кваліфікація технік-електрик</p>
 		<h3>Посади</h3>
-		<p><b>2010</b> Викладач спеціальних дисциплін</p>
-		<p><b>2018</b> Голова циклової комісії спеціальних комп'ютерних дисциплін</p>
-		<p><b>2006</b> Завідуючий інформаційним центром коледжу</p>
-		<p><b>2005</b> Лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
+		<p><b>2010-2025</b> Викладач спеціальних дисциплін</p>
+		<p><b>2018-2021</b> Голова циклової комісії спеціальних комп'ютерних дисциплін</p>
+		<p><b>2006-2010</b> Завідуючий інформаційним центром коледжу</p>
+		<p><b>2005-2010</b> Лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
 		
 		
 		<p><img src="pic1.jpg" width=100%></p>
