--- a/index.html
+++ b/index.html
@@ -6,48 +6,29 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Сайт-візитівка</title>
+	<title>Журавель Роман - сайт викладача</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <style>
-	img {
-		max-width: 100%;
+	img {max-width: 100%;
 		height: auto;
-		border-radius: 20px;
-	}
-	
-	.top {
-		display: flex; /* Включає flexbox */
-	}
-	
-	.left {
-		width: 80%;
-	
-	}
-	
-	.right {
-		width: 20%;
-	
-	}
-	
-	.video-container {
-		position: relative;
-		padding-bottom: 56.25%; /* 16:9 співвідношення */
+		border-radius: 20px;}
+	.top {display: flex;}
+	.left {width: 80%;}
+	.right {width: 20%;}
+	.video-container {position: relative;
+		padding-bottom: 56.25%;
 		height: 0;
 		overflow: hidden;
 		max-width: 100%;
 		background: #000;
-		border-radius: 20px;
-	}
-
-	.video-container iframe {
-		position: absolute;
+		border-radius: 20px;}
+	.video-container iframe {position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
-	}
+		height: 100%;}
 </style>
 
 <body>
@@ -87,11 +68,7 @@
 		<p><b>2006-2010</b> Завідуючий інформаційним центром коледжу</p>
 		<p><b>2005-2010</b> Лаборант на відділенні "Електрифікація і автоматизація сільського господарства"</p>
 		
-		
 		<p><img src="pic1.jpg" width=100%></p>
-		
-		
-		
 		
 		<h3>Дисципліни</h3>
 		<p><b>2024-2025</b> Основи цифрового керування та програмування мікроконтролерів</p>
