--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 		height: auto;
 		border-radius: 20px;}
 	.top {display: flex;}
-	.left {width: 80%;
-		padding-left: 20px;
-		padding-right: 20px;}
+	.left {width: 80%;}
 	.right {width: 20%;}
 	.half {width: 50%;}
 	.video-container {position: relative;
@@ -109,70 +107,59 @@
 		<h2 align=center>Мої принципи</h2>
 		
 		<div class=top>
-		
-			<div class=half>
-				<div class=top>
-					<div class=right>
-						<img src="img/img1-klod.jpg" width=100%>
-					</div>
-					<div class=left>
-						Знання деяких принципів легко компенсує незнання деяких фактів.<br>
-						<br>
-						<b>Клод Гельвецій</b><br>
-						філософ-матеріаліст
-					</div>
-				</div>
+			<div class=right>
+				<p align=center><img src="img/img1-klod.jpg" width=90></p>
 			</div>
-		
-			<div class=half>
-				<div class=top>
-					<div class=right>
-						<img src="img/img2-spen.jpg" width=100%>
-					</div>
-					<div class=left>
-						Просвітництво має своєю метою виховання характеру.<br>
-						<br>
-						<b>Герберт Спенсер</b><br>
-						філософ і соціолог
-					</div>
-				</div>
+			<div class=left>
+				<br>
+				Знання деяких принципів легко компенсує незнання деяких фактів.<br>
+				<br>
+				<b>Клод Гельвецій</b><br>
+				філософ-матеріаліст
 			</div>
-		
 		</div>
-		
-		<br>
+
+		<div class=top>
+			<div class=right>
+				<p align=center><img src="img/img2-spen.jpg" width=90></p>
+			</div>
+			<div class=left>
+				<br>
+				Просвітництво має своєю метою виховання характеру.<br>
+				<br>
+				<b>Герберт Спенсер</b><br>
+				філософ і соціолог
+			</div>
+		</div>
+
+		<div class=top>
+			<div class=right>
+				<p align=center><img src="img/img3-dist.jpg" width=90></p>
+			</div>
+			<div class=left>
+			<br>
+				Неправильне знання, гірше, ніж незнання.<br>
+				<br>
+				<b>Адольф Дістервег</b><br>
+				педагог-демократ
+			</div>
+		</div>
 		
 		<div class=top>
-		
-			<div class=half>
-				<div class=top>
-					<div class=right>
-						<img src="img/img3-dist.jpg" width=100%>
-					</div>
-					<div class=left>
-						Неправильне знання, гірше, ніж незнання.<br>
-						<br>
-						<b>Адольф Дістервег</b><br>
-						педагог-демократ
-					</div>
-				</div>
+			<div class=right>
+				<p align=center><img src="img/img4-ruba.jpg" width=90></p>
 			</div>
-		
-			<div class=half>
-				<div class=top>
-					<div class=right>
-						<img src="img/img4-ruba.jpg" width=100%>
-					</div>
-					<div class=left>
-						Справжня освіта здобувається тільки шляхом самоосвіти.<br>
-						<br>
-						<b>Микола Рубакін</b><br>
-						просвітник, учений, письменник
-					</div>
-				</div>
+			<div class=left>
+				<br>
+				Справжня освіта здобувається тільки шляхом самоосвіти.<br>
+				<br>
+				<b>Микола Рубакін</b><br>
+				просвітник, учений, письменник
 			</div>
-		
 		</div>
+			
+		
+		
 		
 		<br>
 		<h2 align=center>Зв'язок зі мною</h2>
