--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		height: auto;
 		border-radius: 20px;}
 	.top {display: flex;}
-	.left {width: 80%;}
+	.left {width: 80%;
+		padding-left: 10px;
+		padding-right: 10px;}
 	.right {width: 20%;}
 	.half {width: 50%;}
 	.video-container {position: relative;
@@ -108,7 +110,7 @@
 		
 		<div class=top>
 			<div class=right>
-				<p align=center><img src="img/img1-klod.jpg" width=90></p>
+				<p align=right><img src="img/img1-klod.jpg" width=100></p>
 			</div>
 			<div class=left>
 				<br>
@@ -121,7 +123,7 @@
 
 		<div class=top>
 			<div class=right>
-				<p align=center><img src="img/img2-spen.jpg" width=90></p>
+				<p align=right><img src="img/img2-spen.jpg" width=100></p>
 			</div>
 			<div class=left>
 				<br>
@@ -134,7 +136,7 @@
 
 		<div class=top>
 			<div class=right>
-				<p align=center><img src="img/img3-dist.jpg" width=90></p>
+				<p align=right><img src="img/img3-dist.jpg" width=100></p>
 			</div>
 			<div class=left>
 			<br>
@@ -147,7 +149,7 @@
 		
 		<div class=top>
 			<div class=right>
-				<p align=center><img src="img/img4-ruba.jpg" width=90></p>
+				<p align=right><img src="img/img4-ruba.jpg" width=100></p>
 			</div>
 			<div class=left>
 				<br>
