--- a/index.html
+++ b/index.html
@@ -110,58 +110,44 @@
 		
 		<div class=top>
 			<div class=right>
-				<p align=right><img src="img/img1-klod.jpg" width=100></p>
+				<p align=center><img src="img/img1-klod.jpg" width=120></p>
 			</div>
 			<div class=left>
-				<br>
-				Знання деяких принципів легко компенсує незнання деяких фактів.<br>
-				<br>
-				<b>Клод Гельвецій</b><br>
-				філософ-матеріаліст
+				<p>Знання деяких принципів легко компенсує незнання деяких фактів.</p>
+				<p align=right><b>Клод Гельвецій</b><br>філософ-матеріаліст</p>
+			</div>
+		</div>
+		
+		<div class=top>
+			<div class=right>
+				<p align=center><img src="img/img2-ruba.jpg" width=120></p>
+			</div>
+			<div class=left>
+				<p>Справжня освіта здобувається тільки шляхом самоосвіти.</p>
+				<p align=right><b>Микола Рубакін</b><br>просвітник, учений, письменник</p>
+			</div>
+		</div>
+		
+		<div class=top>
+			<div class=right>
+				<p align=center><img src="img/img3-dist.jpg" width=120></p>
+			</div>
+			<div class=left>
+				<p>Неправильне знання, гірше, ніж незнання.</p>
+				<p align=right><b>Адольф Дістервег</b><br>педагог-демократ</p>
+			</div>
+		</div>
+		
+		<div class=top>
+			<div class=right>
+				<p align=center><img src="img/img4-spen.jpg" width=120></p>
+			</div>
+			<div class=left>
+				<p>Просвітництво має своєю метою виховання характеру.</p>
+				<p align=right><b>Герберт Спенсер</b><br>філософ і соціолог</p>
 			</div>
 		</div>
 
-		<div class=top>
-			<div class=right>
-				<p align=right><img src="img/img2-spen.jpg" width=100></p>
-			</div>
-			<div class=left>
-				<br>
-				Просвітництво має своєю метою виховання характеру.<br>
-				<br>
-				<b>Герберт Спенсер</b><br>
-				філософ і соціолог
-			</div>
-		</div>
-
-		<div class=top>
-			<div class=right>
-				<p align=right><img src="img/img3-dist.jpg" width=100></p>
-			</div>
-			<div class=left>
-			<br>
-				Неправильне знання, гірше, ніж незнання.<br>
-				<br>
-				<b>Адольф Дістервег</b><br>
-				педагог-демократ
-			</div>
-		</div>
-		
-		<div class=top>
-			<div class=right>
-				<p align=right><img src="img/img4-ruba.jpg" width=100></p>
-			</div>
-			<div class=left>
-				<br>
-				Справжня освіта здобувається тільки шляхом самоосвіти.<br>
-				<br>
-				<b>Микола Рубакін</b><br>
-				просвітник, учений, письменник
-			</div>
-		</div>
-			
-		
-		
 		
 		<br>
 		<h2 align=center>Зв'язок зі мною</h2>
