--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 		padding-left: 10px;
 		padding-right: 10px;}
 	.right {width: 20%;}
-	.half {width: 50%;}
 	.video-container {position: relative;
 		padding-bottom: 56.25%;
 		height: 0;
@@ -49,14 +48,14 @@
 		</div>
 		
 		<p align=center>
-		<a href="https://example.com" class="btn">Мої принципи</a>
+		<a href="#link1" class="btn">Мої принципи</a>
 		<a href="https://example.com" class="btn">Публікації</a>
 		<a href="https://example.com" class="btn">Підвищення кваліфікації</a>
 		<a href="https://example.com" class="btn">Сертифікати</a>
 		<a href="https://example.com" class="btn">Нагороди</a>
-		<a href="https://example.com" class="btn">Освітнє середовище</a>
+		<a href="#link2" class="btn">Освітнє середовище</a>
 		<a href="https://example.com" class="btn">Файли</a>
-		<a href="https://example.com" class="btn">Зв'язок</a>
+		<a href="#link3" class="btn">Зв'язок</a>
 		</p>
 		
 		<br>
@@ -106,7 +105,7 @@
 		
 		<br>
 		
-		<h2 align=center>Мої принципи</h2>
+		<h2 id=link1 align=center>Мої принципи</h2>
 		
 		<div class=top>
 			<div class=right>
@@ -147,16 +146,38 @@
 				<p align=right><b>Герберт Спенсер</b><br>філософ і соціолог</p>
 			</div>
 		</div>
-
 		
 		<br>
-		<h2 align=center>Зв'язок зі мною</h2>
+		
+		<h2 id=link2 align=center>Освітнє середовище</h2>
+		
+		<a href="https://classroom.google.com/c/NzExNTMwNjUxODAy?cjc=smm6ibm" class="btn">ІНФОРМАЦІЙНІ ТЕХНОЛОГІЇ<br>1 пр. комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NjU2ODE3MzM5MzM0?cjc=kkyntqu" class="btn">АЛГОРИТМИ І МЕТОДИ ОБЧИСЛЕНЬ<br>1 пр. комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NTkyNTc0MjU2Mzkz?cjc=4qzvpvr" class="btn">АЛГОРИТМИ І МЕТОДИ ОБЧИСЛЕНЬ<br>2 комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NzQ2MDU3OTg2OTk3?cjc=sdz6tez" class="btn">АРХІТЕКТУРА КОМП'ЮТЕРІВ<br>2 пр. комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NTkyNTc1MzEyNjMz?cjc=2yhrnnn" class="btn">АРХІТЕКТУРА КОМП'ЮТЕРІВ<br>3 комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/Njg3OTU5MDc2MTU4?cjc=kvwfjny" class="btn">КОМП'ЮТЕРНІ МЕРЕЖІ<br>2 пр. комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NzU1MzAyNjAwNDQx?cjc=lwa5xpm" class="btn">КОМП'ЮТЕРНІ МЕРЕЖІ<br>3 комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NTQ1NTM1NDA4NzI5?cjc=p4g6uce" class="btn">КОМП'ЮТЕРНІ МЕРЕЖІ<br>4 комп. 2024-2025 н.р.</a><br>		
+		<a href="https://classroom.google.com/c/NzExNTMxMTIxMDYz?cjc=t3ve276" class="btn">ОСНОВИ АВТОМАТИКИ<br>2-А пр. ел. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NzExNTM5MDg3NDk1?cjc=vf5dvuw" class="btn">ОСНОВИ АВТОМАТИКИ<br>2-Б пр. ел. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NzExNTMxMjExNTk5?cjc=k2uviux" class="btn">ОСНОВИ ЦИФРОВОГО КЕРУВАННЯ ТА ПРОГРАМУВАННЯ МІКРОКОНТРОЛЕРІВ<br>3 пр. ел. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NzQ5NTY3NTk5Nzg3?cjc=psarltc" class="btn">ПРАКТИКА З ОТРИМАННЯ РОБОЧОЇ ПРОФЕСІЇ<br>2 пр. комп. 2024-2025 н.р.</a><br>
+		<a href="https://classroom.google.com/c/NzYwMTYyMDk3NTA4?cjc=z7plhop" class="btn">ПРАКТИКА З ОТРИМАННЯ РОБОЧОЇ ПРОФЕСІЇ<br>3 комп. 2024-2025 н.р.</a><br>		
+
+		<br>
+		
+		<h2 id=link3 align=center>Зв'язок зі мною</h2>
 		
 		<p align=center><a href="mailto:roman.zhuravel@ptfc.ukr.education" class="btn">roman.zhuravel@ptfc.ukr.education</a></p>
 		
 		<br>
 		
-		<a href="https://example.com" class="btn"><b> < </b></a> <br><br>
+		<p><img src="img/pic3.jpg" width=100%></p>
+		
+		<p align=right>2020-2025 Roman Zhuravel</p>
+		
+		<br>
 		
 	</div>
 
