--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 
 <style>
-	img {max-width: 100%;
-		height: auto;
-		border-radius: 20px;}
 	.top {display: flex;}
 	.left {width: 80%;
 		padding-left: 10px;
@@ -25,7 +22,8 @@
 		overflow: hidden;
 		max-width: 100%;
 		background: #000;
-		border-radius: 20px;}
+		border-radius: 20px;
+		border: 1px solid #212529;}
 	.video-container iframe {position: absolute;
 		top: 0;
 		left: 0;
@@ -49,12 +47,12 @@
 		
 		<p align=center>
 		<a href="#link1" class="btn">Мої принципи</a>
-		<a href="https://example.com" class="btn">Публікації</a>
-		<a href="https://example.com" class="btn">Підвищення кваліфікації</a>
-		<a href="https://example.com" class="btn">Сертифікати</a>
-		<a href="https://example.com" class="btn">Нагороди</a>
+		<a href="publications/pub.html" class="btn">Публікації</a>
+		<a href="qualifications/qual.html" class="btn">Підвищення кваліфікації</a>
+		<a href="certificates/cert.html" class="btn">Сертифікати</a>
+		<a href="awards/awd.html" class="btn">Нагороди</a>
 		<a href="#link2" class="btn">Освітнє середовище</a>
-		<a href="https://example.com" class="btn">Файли</a>
+		<a href="materials.html" class="btn">Методичні матеріали</a>
 		<a href="#link3" class="btn">Зв'язок</a>
 		</p>
 		
@@ -182,4 +180,5 @@
 	</div>
 
 </body>
+
 </html>
